Fix alignment issues'

--- a/frontend/src/style/header.module.css
+++ b/frontend/src/style/header.module.css
@@ -1,15 +1,14 @@
- 
 .header {
-    position: fixed;
-    color: white;
-    background-color: #7553FF;
-    padding: 3vh;
-    font-size: 20px;
-    text-align: center;
-    z-index: 100;   
-    width: 100%;
-    height: 2%;
-    margin: 0;
-    top:0%;
-    left:0%;
+  position: fixed;
+  color: white;
+  background-color: #7553ff;
+  padding: 3vh 0 3vh 0;
+  font-size: 20px;
+  text-align: center;
+  z-index: 100;
+  width: 100%;
+  height: 2%;
+  margin: 0;
+  top: 0%;
+  left: 0%;
 }
